--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Donil Jaison — Portfolio</title>
     <meta name="description" content="Portfolio of Donil Jaison, Computer Science student and aspiring full‑stack developer." />
     <meta name="author" content="Donil Jaison" />
-    <meta name="keywords" content="web developer, UI/UX designer, React, Node.js, portfolio, web development, software engineer" />
+    <meta name="keywords" content="React, Node.js, portfolio, web development, software engineer" />
 
     <meta property="og:title" content="Donil Jaison — Portfolio" />
     <meta property="og:description" content="Portfolio showcasing projects in web development, algorithms and modern technologies." />
